--- a/styles/topnav.css
+++ b/styles/topnav.css
@@ -1,5 +1,7 @@
 .body
 {
+    -webkit-tap-highlight-color: transparent;
+    
     margin: 0px;
     padding: 0px;
 }
@@ -34,4 +36,5 @@
     background-color: var(--bg);
     padding: 5px;
     box-shadow: var(--shadow-m);
+
 }
